--- a/preload/with-preload.html
+++ b/preload/with-preload.html
@@ -4,12 +4,13 @@
 
   <link rel="preload" href="style.css" as="style" />
   <link rel="preload" href="main.js" as="script" />
+	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" as="font">
 
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <h1>Style.css and main.js are both preloaded</h1>
+  <h1>Style.css, main.js, and the google font are all preloaded</h1>
   <canvas></canvas>
 
   <script src="main.js" defer></script>
