--- a/preload/no-preload.html
+++ b/preload/no-preload.html
@@ -6,6 +6,7 @@
   <link rel="preload" href="main.js" as="script" /> -->
 
   <link rel="stylesheet" href="style.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 
 	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
