--- a/preload/with-preload.html
+++ b/preload/with-preload.html
@@ -4,7 +4,11 @@
 
   <link rel="preload" href="style.css" as="style" />
   <link rel="preload" href="main.js" as="script" />
-	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" as="font">
+	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" as="style">
+
+	<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 
   <link rel="stylesheet" href="style.css" />
 </head>
