--- a/preload/no-preload.html
+++ b/preload/no-preload.html
@@ -1,21 +1,33 @@
-<head>
-  <meta charset="utf-8" />
-  <title>No Preload</title>
+<html !doctype html>
+	<head>
+		<meta charset="utf-8" />
+		<title>No Preload</title>
+		<script>let date1 = new Date().getMilliseconds();</script>
 
-  <!-- <link rel="preload" href="style.css" as="style" />
-  <link rel="preload" href="main.js" as="script" /> -->
+		<!-- <link rel="preload" href="style.css" as="style" />
+		<link rel="preload" href="main.js" as="script" /> -->
 
-  <link rel="stylesheet" href="style.css" />
-	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+		<link rel="stylesheet" href="style.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 
-	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  -->
-</head>
+		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  -->
+	</head>
+	<body>
+		<h1>No Preload</h1>
+		<canvas></canvas>
 
-<body>
-  <h1>No Preload</h1>
-  <canvas></canvas>
+		<script src="main.js" defer></script>
 
-  <script src="main.js" defer></script>
-</body>
+		<h2 id="loadTime"></h2>
+		<script>
+			addEventListener("pageshow", (event) => {
+				let date2 = new Date().getMilliseconds();
+				let loadTimeinMS = date2 - date1;
+				document.getElementById("loadTime").innerText = `Load time: ${loadTimeinMS} milliseconds`;
+			});
+		</script>
+	</body>
+
+</html>
