--- a/preload/no-preload.html
+++ b/preload/no-preload.html
@@ -4,15 +4,9 @@
 		<title>No Preload</title>
 		<script>let date1 = new Date().getMilliseconds();</script>
 
-		<!-- <link rel="preload" href="style.css" as="style" />
-		<link rel="preload" href="main.js" as="script" /> -->
-
+		<!-- STYLESHEETS -->
 		<link rel="stylesheet" href="style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-
-		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  -->
 	</head>
 	<body>
 		<h1>No Preload</h1>
