--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>does this thing work?</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<h1>Let's talk about Resource Hints.</h1>
+		<br><br>
+
+		<h2>DNS Prefetch</h2>
+		<a href="dns-prefetch/with-dns-prefetch.html">With DNS prefetch</a>
+		<a href="dns-prefetch/no-dns-prefetch.html">No DNS prefetch</a>
+		<br><br>
+
+		<h2>Preconnect</h2>
+		<a href="preconnect/with-preconnect.html">With preconnect</a>
+		<a href="preconnect/no-preconnect.html">No preconnect</a>
+		<br><br>
+
+		<h2>Prefetch</h2>
+		<a href="prefetch/with-prefetch.html">With Prefetch</a>
+		<a href="prefetch/no-prefetch.html">No Prefetch</a>
+		<br><br>
+
+		<h2>Preload</h2>
+		<a href="preload/no-preload.html">No Preload</a>
+		<a href="preload/with-preload.html">with Preload</a>
+		<br><br>
+
+		<h2>Prerender</h2>
+		<a href=""></a>
+		<a href=""></a>
+
+
 	</body>
 </html>
