--- a/preload/no-preload.html
+++ b/preload/no-preload.html
@@ -1,11 +1,11 @@
-<script>let date1 = new Date().getMilliseconds();</script>
-<html !doctype html>
+<!DOCTYPE html>
 	<head>
+		<script>let date1 = new Date().getMilliseconds();</script>
 		<meta charset="utf-8" />
 		<title>No Preload</title>
 
 		<!-- STYLESHEETS -->
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
