--- a/preload/with-preload.html
+++ b/preload/with-preload.html
@@ -1,11 +1,11 @@
-<script>let date1 = new Date().getMilliseconds();</script>
-<html !doctype html>
+<!DOCTYPE html>
 	<head>
+		<script>let date1 = new Date().getMilliseconds();</script>
 	  <meta charset="utf-8" />
 		<title>JS and CSS preload example</title>
 
 		<!-- PRELOADS -->
-		<link rel="preload" href="style.css" as="style" />
+		<link rel="preload" href="../style.css" as="style" />
 		<link rel="preload" href="main.js" as="script" />
 		<link rel="preload" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2" as="font" type="font/woff2" crossorigin>
 
