--- a/preload/with-preload.html
+++ b/preload/with-preload.html
@@ -12,7 +12,7 @@
 
 		<!-- STYLESHEETS -->
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../style.css" />
 	</head>
 	<body>
 		<h1>Style.css, main.js, and the google font are all preloaded</h1>
