--- a/dns-prefetch/no-dns-prefetch.html
+++ b/dns-prefetch/no-dns-prefetch.html
@@ -1,5 +1,6 @@
-<html lang="en">
+<!DOCTYPE html>
   <head>
+		<script>let date1 = new Date().getMilliseconds();</script>
     <meta charset="utf-8" />
 		<title>NO DNS Prefetch</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -8,6 +9,15 @@
   <body>
     <!-- your page content -->
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  </body>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
+		
+		<h2 id="loadTime" style="text-align: center;"></h2>
+		<script>
+			addEventListener("load", (event) => {
+				let date2 = new Date().getMilliseconds();
+				let loadTimeinMS = date2 - date1;
+				document.getElementById("loadTime").innerText = `Load time: ${loadTimeinMS} milliseconds`;
+			});
+		</script>
+	</body>
 </html>
