--- a/dns-prefetch/with-dns-prefetch.html
+++ b/dns-prefetch/with-dns-prefetch.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!DOCTYPE html>
   <head>
 		<script>let date1 = new Date().getMilliseconds();</script>
     <meta charset="utf-8" />
@@ -17,9 +17,9 @@
   <body>
     <!-- your page content -->
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
 		
-		<h2 id="loadTime"></h2>
+		<h2 id="loadTime" style="text-align: center;"></h2>
 		<script>
 			addEventListener("load", (event) => {
 				let date2 = new Date().getMilliseconds();
