--- a/dns-prefetch/with-dns-prefetch.html
+++ b/dns-prefetch/with-dns-prefetch.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
   <head>
 		<script>let date1 = new Date().getMilliseconds();</script>
-    <meta charset="utf-8" />
+		<meta charset="utf-8" />
 		<title>DNS Prefetch</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link rel="dns-prefetch" href="https://www.youtube.com" />
-    <link rel="dns-prefetch" href="https://i.ytimg.com" />
-    <link rel="dns-prefetch" href="https://jnn-pa.googleapis.com" />
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
-    <link rel="dns-prefetch" href="https://www.google.com" />
-    <link rel="dns-prefetch" href="https://yt3.ggpht.com" />
+		<link rel="dns-prefetch" href="https://www.youtube.com" />
+		<link rel="dns-prefetch" href="https://i.ytimg.com" />
+		<link rel="dns-prefetch" href="https://jnn-pa.googleapis.com" />
+		<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+		<link rel="dns-prefetch" href="https://www.google.com" />
+		<link rel="dns-prefetch" href="https://yt3.ggpht.com" />
+		<link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
+		<link rel="dns-prefetch" href="https://static.doubleclick.net" />
+		<link rel="dns-prefetch" href="https://www.gstatic.com" />
 
     <!-- and all other head elements -->
-  </head>
-  <body>
-    <!-- your page content -->
+	</head>
+	<body>
+		<!-- your page content -->
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
 		
