--- a/dns-prefetch/with-dns-prefetch.html
+++ b/dns-prefetch/with-dns-prefetch.html
@@ -16,9 +16,17 @@
 		<link rel="dns-prefetch" href="https://www.gstatic.com" />
 
     <!-- and all other head elements -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
+
 	</head>
 	<body>
 		<!-- your page content -->
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
+
+
+
+
 
 		<h2 id="loadTime" style="text-align: center;"></h2>
 		<script>
@@ -28,8 +36,5 @@
 				document.getElementById("loadTime").innerText = `Load time: ${loadTimeinMS} milliseconds`;
 			});
 		</script>
-
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
-
 	</body>
 </html>
