--- a/dns-prefetch/no-dns-prefetch.html
+++ b/dns-prefetch/no-dns-prefetch.html
@@ -4,7 +4,10 @@
 		<meta charset="utf-8" />
 		<title>NO DNS Prefetch</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		
 		<!-- and all other head elements -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
 	</head>
 	<body>
 		<!-- your page content -->
