--- a/dns-prefetch/with-dns-prefetch.html
+++ b/dns-prefetch/with-dns-prefetch.html
@@ -5,8 +5,8 @@
 		<title>DNS Prefetch</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-		<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
-		<!-- <link rel="dns-prefetch" href="https://www.youtube.com" />
+		<!-- <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" /> -->
+		<link rel="dns-prefetch" href="https://www.youtube.com" />
 		<link rel="dns-prefetch" href="https://i.ytimg.com" />
 		<link rel="dns-prefetch" href="https://jnn-pa.googleapis.com" />
 		<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
@@ -14,7 +14,7 @@
 		<link rel="dns-prefetch" href="https://yt3.ggpht.com" />
 		<link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
 		<link rel="dns-prefetch" href="https://static.doubleclick.net" />
-		<link rel="dns-prefetch" href="https://www.gstatic.com" /> -->
+		<link rel="dns-prefetch" href="https://www.gstatic.com" />
 
     <!-- and all other head elements -->
 
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<!-- your page content -->
-		<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe> -->
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
