--- a/preconnect/with-preconnect.html
+++ b/preconnect/with-preconnect.html
@@ -16,7 +16,9 @@
 
 		<!-- STYLESHEETS -->
 		<link rel="stylesheet" href="../style.css" />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
 	</head>
 	<body>
 		<h1>No Preconnect</h1>
