--- a/preconnect/with-preconnect.html
+++ b/preconnect/with-preconnect.html
@@ -13,10 +13,14 @@
 		<link rel="preconnect" href="https://googleads.g.doubleclick.net" />
 		<link rel="preconnect" href="https://static.doubleclick.net" />
 		<link rel="preconnect" href="https://www.gstatic.com" />
+		<link rel="preconnect" href="https://jnn-pa.googleapis.com" />
+
 
 		<!-- STYLESHEETS -->
 		<link rel="stylesheet" href="../style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<script src="../d3.js"></script>
+		<script src="../three.js"></script>
 
 	</head>
 	<body>
@@ -33,7 +37,5 @@
 			});
 		</script>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
 	</body>
 </html>
