--- a/preconnect/with-preconnect.html
+++ b/preconnect/with-preconnect.html
@@ -24,7 +24,10 @@
 
 	</head>
 	<body>
-		<h1>No Preconnect</h1>
+		<h1>With Preconnect</h1>
+
+		<img width="550" src="pic1.jpg"/>
+		<img width="550" src="pic2.jpg"/>
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
 
