--- a/prefetch/with-prefetch.html
+++ b/prefetch/with-prefetch.html
@@ -7,6 +7,17 @@
 		<link rel="prefetch" href="second-article.html" />
 		<link rel="prefetch" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2" />
 
+<script type="speculationrules">
+  {
+    "prerender": [
+      {
+        "source": "list",
+        "urls": ["second-article.html"]
+      }
+    ]
+  }
+</script>
+
 		<!-- STYLESHEETS -->
 		<link rel="stylesheet" href="../style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
