--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
+	<head>
+		<meta charset="utf-8" />
+		<title>Resource Hints</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+	</head>
 	<body>
 		<h1>Let's talk about Resource Hints.</h1>
 		<br><br>
 
 		<h2>DNS Prefetch</h2>
-		<a href="dns-prefetch/with-dns-prefetch.html">With DNS prefetch</a>
-		<a href="dns-prefetch/no-dns-prefetch.html">No DNS prefetch</a>
+		<a href="dns-prefetch/dns-prefetch.html">DNS Prefetch</a>
+		<br>
+		<a href="dns-prefetch/example.html">DNS Prefetch Example</a>
 		<br><br>
 
 		<h2>Preconnect</h2>
-		<a href="preconnect/with-preconnect.html">With preconnect</a>
-		<a href="preconnect/no-preconnect.html">No preconnect</a>
+		<a href="preconnect/preconnect.html">Preconnect</a>
+		<br>
+		<a href="preconnect/example.html">Preconnect Example</a>
 		<br><br>
 
 		<h2>Prefetch</h2>
-		<a href="prefetch/with-prefetch.html">With Prefetch</a>
-		<a href="prefetch/no-prefetch.html">No Prefetch</a>
+		<a href="prefetch/prefetch.html">Prefetch</a>
+		<a href="prefetch/example.html">No Prefetch</a>
 		<br><br>
 
 		<h2>Preload</h2>
