--- a/preconnect/example.html
+++ b/preconnect/example.html
@@ -2,18 +2,11 @@
 	<head>
 		<script>let date1 = new Date().getMilliseconds();</script>
 		<meta charset="utf-8" />
-		<title>With Preconnect</title>
+		<title>Preconnect Example</title>
 
 		<link rel="preconnect" href="https://www.youtube.com" />
 		<link rel="preconnect" href="https://i.ytimg.com" />
-		<link rel="preconnect" href="https://jnn-pa.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link rel="preconnect" href="https://www.google.com" />
-		<link rel="preconnect" href="https://yt3.ggpht.com" />
-		<link rel="preconnect" href="https://googleads.g.doubleclick.net" />
-		<link rel="preconnect" href="https://static.doubleclick.net" />
-		<link rel="preconnect" href="https://www.gstatic.com" />
-		<link rel="preconnect" href="https://jnn-pa.googleapis.com" />
 
 
 		<!-- STYLESHEETS -->
@@ -24,10 +17,7 @@
 
 	</head>
 	<body>
-		<h1>With Preconnect</h1>
-
-		<!-- <img width="550" src="pic1.jpg"/>
-		<img width="550" src="pic2.jpg"/> -->
+		<h1>Preconnect Example</h1>
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allow="web-share" allowfullscreen></iframe>
 
