--- a/total/third-page.html
+++ b/total/third-page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Second page</title>
+		<title>Third page</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	</head>
 	<body>
-		<h1>Second page</h1>
+		<h1>Third page</h1>
 		<br><br>
 
 
