--- a/total/index.html
+++ b/total/index.html
@@ -6,6 +6,7 @@
 	
 		<!-- Preload this stylesheet -->
 		<link rel="preload" href="../style.css" as="style"/>
+		<link rel="preload" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2" as="font"/>
 		<link rel="stylesheet" href="../style.css"/>
 
 		<!-- Preconnect this iframe -->
@@ -16,8 +17,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 		<script src="../flying-pages.js"></script>
-		<!-- <script src="../d3.js"></script>
-		<script src="../three.js"></script> -->
+		<script src="../d3.js"></script>
+		<!-- <script src="../three.js"></script> -->
 	</head>
 	<body>
 		<h1>Using all 5 Resource Hints</h1>
@@ -30,7 +31,7 @@
 		<br>
 		<br>
 
-		
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+
+		<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe> -->
 	</body>
 </html
