--- a/total/index.html
+++ b/total/index.html
@@ -16,8 +16,8 @@
 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-		<script src="../flying-pages.js"></script>
-		<script src="../d3.js"></script>
+		<script src="/js/flying-pages.js"></script>
+		<script src="/js/d3.js"></script>
 		<!-- <script src="../three.js"></script> -->
 	</head>
 	<body>
