--- a/preconnect/example.html
+++ b/preconnect/example.html
@@ -12,8 +12,8 @@
 		<!-- STYLESHEETS -->
 		<link rel="stylesheet" href="../style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-		<script src="../d3.js"></script>
-		<script src="../three.js"></script>
+		<script src="/js/d3.js"></script>
+		<script src="/js/three.js"></script>
 
 	</head>
 	<body>
