--- a/total/index.html
+++ b/total/index.html
@@ -32,6 +32,6 @@
 		<br>
 
 
-		<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe> -->
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 	</body>
 </html
