--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		<a href="preload/with-preload.html">with Preload</a>
 		<br><br>
 
-		<h2>Prerender</h2>
+		<!-- <h2>Prerender</h2>
 		<a href=""></a>
-		<a href=""></a>
+		<a href=""></a> -->
 
 
 	</body>
