--- a/total/no-hints.html
+++ b/total/no-hints.html
@@ -4,23 +4,13 @@
 		<title>All Together</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	
-		<!-- DNS Prefetch -->
-		<link ref="dns-prefetch" href="https://static.doubleclick.net"/>
-		<link ref="dns-prefetch" href="https://jnn-pa.googleapis.com"/>
 
-		
 
-		<!-- Preload this stylesheet -->
-		<link rel="preload" href="../style.css" as="style"/>
-		<link rel="preload" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2" as="font"/>
-		<link rel="preload" href="/js/flying-pages.js" as="script"/>
-		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" as="script"/>
+
 
 		<link rel="stylesheet" href="../style.css"/>
 
-		<!-- Preconnect this iframe -->
-		<link rel="preconnect" href="https://www.youtube.com"/>
-		<link rel="preconnect" href="https://cdnjs.cloudflare.com"/>
+
 
 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -32,7 +22,7 @@
 		<h1>Using all 5 Resource Hints</h1>
 		<br>
 
-		<h3>Automatically Prefetching both of these two links, with flying-pages.js</h3>
+		<!-- <h3>Automatically Prefetching both of these two links, with flying-pages.js</h3> -->
 		<a href="second-page.html">Second Page</a>
 		<br>
 		<a href="third-page.html">Third Page</a>
