--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 		<a href=""></a>
 		<a href=""></a> -->
 
+		<h2>All Together</h2>
+		<a href="total/index.html">All Hints</a>
+		<a href="total/no-hints.html">No Resource Hints</a>
+
 
 	</body>
 </html>
