--- a/total/index.html
+++ b/total/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	
 		<!-- DNS Prefetch -->
-		<link ref="dns-prefetch" href="https://static.doubleclick.net"/>
 		<link ref="dns-prefetch" href="https://jnn-pa.googleapis.com"/>
 
 		
@@ -21,12 +20,13 @@
 		<!-- Preconnect this iframe -->
 		<link rel="preconnect" href="https://www.youtube.com"/>
 		<link rel="preconnect" href="https://cdnjs.cloudflare.com"/>
+		<link ref="preconnect" href="https://static.doubleclick.net"/>
+		<link ref="preconnect" href="https://www.gstatic.com"/>
 
 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 		<script src="/js/flying-pages.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<h1>Using all 5 Resource Hints</h1>
@@ -41,5 +41,6 @@
 
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	</body>
 </html
