--- a/total/no-hints.html
+++ b/total/no-hints.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8" />
-		<title>All Together</title>
+		<title>Zero Resource Hints</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	
 
@@ -19,7 +19,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	</head>
 	<body>
-		<h1>Using all 5 Resource Hints</h1>
+		<h1>Using Zero Resource Hints</h1>
 		<br>
 
 		<!-- <h3>Automatically Prefetching both of these two links, with flying-pages.js</h3> -->
