--- a/total/no-hints.html
+++ b/total/no-hints.html
@@ -26,4 +26,4 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	</body>
-</html
+</html>
