--- a/total/no-hints.html
+++ b/total/no-hints.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Zero Resource Hints</title>
+		<script>let date1 = new Date().getMilliseconds();</script>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 	
 		<link rel="stylesheet" href="../style.css"/>
@@ -16,14 +17,23 @@
 		<br>
 
 		<!-- <h3>Automatically Prefetching both of these two links, with flying-pages.js</h3> -->
-		<a href="second-page.html">Second Page</a>
+		<!-- <a href="second-page.html">Second Page</a> -->
 		<br>
-		<a href="third-page.html">Third Page</a>
+		<!-- <a href="third-page.html">Third Page</a> -->
 		<br>
 		<br>
 
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+		<h2 id="loadTime" style="text-align: center;"></h2>
+		<script>
+			addEventListener("load", (event) => {
+				let date2 = new Date().getMilliseconds();
+				let loadTimeinMS = date2 - date1;
+				document.getElementById("loadTime").innerText = `Load time: ${loadTimeinMS} milliseconds`;
+			});
+		</script>
 	</body>
 </html>
