--- a/total/index.html
+++ b/total/index.html
@@ -40,7 +40,8 @@
 		<br>
 		<br>
 
-		<img src="pic1.webp" alt=""/>
+		<img width="550" height="auto" src="pic1.webp" alt=""/>
+		<img width="550" height="auto" src="pic2.webp" alt=""/>
 
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
