--- a/total/no-hints.html
+++ b/total/no-hints.html
@@ -23,6 +23,9 @@
 		<br>
 		<br>
 
+		<img width="550" height="auto" src="pic1.webp" alt=""/>
+		<img width="550" height="auto" src="pic2.webp" alt=""/>
+
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/WVoekRTD1Ik?si=86WWrICppWnC4iFX" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
