--- a/total/no-hints.html
+++ b/total/no-hints.html
@@ -13,7 +13,7 @@
 		<script src="/js/flying-pages.js"></script>
 	</head>
 	<body>
-		<h1>Using Zero Resource Hints</h1>
+		<h1>Same page, but using Zero Resource Hints</h1>
 		<br>
 
 		<!-- <h3>Automatically Prefetching both of these two links, with flying-pages.js</h3> -->
